--- a/templates/appkit-landing-v1.2/index.html
+++ b/templates/appkit-landing-v1.2/index.html
@@ -28,27 +28,11 @@
 
 <body>
     <!-- ******HEADER****** --> 
-    <header id="header" class="header">  
-        <div class="container">
-            <nav class="main-nav navbar-right" role="navigation">
-                <div class="navbar-header">
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button><!--//nav-toggle-->
-                </div><!--//navbar-header-->
-            </nav><!--//main-nav-->                     
-        </div><!--//container-->
-    </header><!--//header-->
+
     
     <div id="hero" class="hero-section">
         
         <div id="hero-carousel" class="hero-carousel carousel carousel-fade slide" data-ride="carousel" data-interval="10000">
-            
-	
-			
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
     			
@@ -56,8 +40,8 @@
 					<div class="item-content container">
     					<div class="item-content-inner">
     				        
-				            <h2 class="heading">AppKit is the perfect front-end <br class="hidden-xs">template for app developers</h2>
-				            <p class="intro">It helps developers to build beautiful and user-friendly web apps quickly and easily!</p>
+				            <h2 class="heading">Школа-пансионат "Симфония"</h2>
+				            <p class="intro">Это, пожалуй, лучшая образовательная площадка для ваших детей.</p>
     				        
     					</div><!--//item-content-inner-->
 					</div><!--//item-content-->
@@ -94,7 +78,7 @@
     <div id="about" class="about-section">
         <div class="container text-center">
             <h2 class="section-title">Почему вам слеудет поступить именно в нашу школу-пансионат?</h2>
-            <p class="intro">Appkit uses modern front-end technologies and is packed with useful components and widgets to speed up your app development</p>
+            <p class="intro">"Симфония" - оркестр знаний, общения и радости.  Здесь с детьми занимаются лучшие квалифицированные учителя, практикуется тьюторство, есть два соц. педагога и два школьных психолога.</p>
             
             <div class="items-wrapper row">
                 <div class="item col-sm-4 col-xs-12">
@@ -102,9 +86,10 @@
                         <div class="figure-holder">
                             <img class="figure-image" src="assets/images/figure-1.png" alt="image">
                         </div><!--//figure-holder-->
-                        <h3 class="item-title">UX-Centered Design</h3>
+                        <h3 class="item-title">Дизайн школы</h3>
                         <div class="item-desc">
-                            Bespoke UX/UI design to enhance your app's user experience. Let AppKit take care of the design so you can develop without design resources.
+                            Дизайн, настраивающий на обучение
+Школа-пансионат выполнена в классическом стиле, где преобладающий материал - красный кирпич. Такой дизайн не навеевает скуку, ведь экстерьер сделан со вкусом профессиональными архитекторами. Однако, строгая обстановка не позволит детям забыть о том, что в школе им нужно учиться.
                         </div><!--//item-desc-->
                     </div><!--//item-inner-->
                 </div><!--//item-->
@@ -113,9 +98,9 @@
                         <div class="figure-holder">
                             <img class="figure-image" src="assets/images/figure-2.png" alt="image">
                         </div><!--//figure-holder-->
-                        <h3 class="item-title">Supercharge App Development</h3>
-                        <div class="item-desc">
-                            AppKit provides developers with a ready-made front-end solution so you can concentrate on making your app’s back-end robust and awesome. It empowers small teams to create big things. </div><!--//item-desc-->
+                        <h3 class="item-title">Как устроена школа</h3>
+                        <div class="item-desc">Устройство школы
+                            В пансионате можно выбрать форму проживания: однодневная, пятидневная, семидневная. Кампус школы разделён на две части: мужскую и женскую,  перегороженную стеной. Все проходы из жилых отделов запираются на ночь, а днём открыты постоянно. За дисциплиной следят 4 воспитателя: двое за девочками, и двое за мальчиками. В обязанности воспитателя входит проверять соблюдение правила отбоя и подъёма, провожать детей от кампуса до столовой, учебного корпуса или до места проведения дополнительных занятий.</div><!--//item-desc-->
                     </div><!--//item-inner-->
                 </div><!--//item-->
                 <div class="item col-sm-4 col-xs-12">
@@ -123,9 +108,8 @@
                         <div class="figure-holder">
                             <img class="figure-image" src="assets/images/figure-3.png" alt="image">
                         </div><!--//figure-holder-->
-                        <h3 class="item-title">Mobile First</h3>
-                        <div class="item-desc">
-                            Built on the popular Bootstrap framework, so the design is “Mobile First” and fully responsive. For a startup, building an HTML5 webapp which also works across mobile devices is the most cost-effective way to get your product off the ground.</div><!--//item-desc-->
+                        <h3 class="item-title">Стоимость</h3>
+                        <div class="item-desc">Стоимость обчуения в нашей школе, вместе с проживанием и питанием состовляет 25 тысяч рублей, из этой суммы деньги идут на проведение электричества, водоснабжения, зарплату учителям, бесплатные кружки для детей, просторные и уютные комнаты, а также на еду и прочие расходы.</div><!--//item-desc-->
                     </div><!--//item-inner-->
                 </div><!--//item-->
             </div><!--//items-wrapper-->
@@ -134,32 +118,26 @@
     
     <div class="team-section" id="team">
         <div class="container text-center">
-            <h2 class="section-title">Our Team</h2>
-            <p class="intro">See who are behind AppKit</p>
+            <h2 class="section-title">Наша команда</h2>
             <div class="story">
-                <p>AppKit is created by Xiaoying Riley and Tomasz Najdek. Xiaoying and Tom got to know each other while working as freelancers on Google projects and became good friends. They firmly believe with the right resource, solopreneurs and small teams can execute beautiful products too. Thus they made AppKit to help developers and startups make outstanding products - the internet has made it possible for the "small guys" to compete directly with the "big guys".</p>
+                <p>Наша команда
+                    Лапотников Демид - ответственный по внутреннему устройству школы, Дроздова Софья - ответственная за юридическую часть, а также архитектор нашего пансионата, Панасенко Никита - ответственный за финансовую часть, Яньшина Анна - ответственная за организацию проекта и команды.</p>
             </div>
             <div class="members-wrapper row">
                 <div class="item col-md-6 col-sm-6 col-xs-12">
                     <div class="item-inner">
                         <div class="profile">
-                            <img class="profile-image" src="assets/images/team-1.png" alt="Xiaoying Riley" />
+                            <img class="profile-image" src="assets/images/Ann.jpg" alt="Xiaoying Riley" />
                         </div>
-                        
+
                         <div class="member-content">
-                            <h3 class="member-name">Xiaoying Riley</h3>
-                            <div class="member-title">Full-Stack Designer</div>
+                            <h3 class="member-name">Анна Яньшина</h3>
+                            <div class="member-title">Директор школы</div>
                             <ul class="social list-inline">
-                                <li><a class="twitter" href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                
-                                <li><a class="facebook" href="https://www.facebook.com/3rdwavethemes/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="github" href="https://github.com/xriley" target="_blank"><i class="fa fa-github"></i></a></li>
-                                <li><a class="dribbble" href="https://dribbble.com/Xiaoying" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                               <li><a class="linkedin" href="https://uk.linkedin.com/in/xiaoying" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                
+                                <li><a class="twitter" href="https://vk.com/a.miloslav" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             </ul>
                             <div class="member-desc">
-                               <p>Xiaoying is the UX/UI designer behind AppKit. She loves designing and making Bootstrap themes/templates for developers and startups. You can find her sharing useful UX and webdev related content on <a href="https://twitter.com/3rdwave_themes" target="_blank">Twitter</a> and <a href="https://www.facebook.com/3rdwavethemes/" target="_blank">Facebook</a>. Follow her if you like what she does!</p>
+                      
                             </div><!--//member-desc-->
                         </div><!--//member-content-->
                     </div><!--//item-inner-->
@@ -167,22 +145,52 @@
                 <div class="item col-md-6 col-sm-6 col-xs-12">
                     <div class="item-inner">
                         <div class="profile">
-                            <img class="profile-image" src="assets/images/team-2.png" alt="Tom Najdek" />
+                            <img class="profile-image" src="assets/images/Nikita.jpg" alt="Xiaoying Riley" />
                         </div>
-                        
+
                         <div class="member-content">
-                            <h3 class="member-name">Tomasz Najdek</h3>
-                            <div class="member-title">Full-Stack Developer</div>
+                            <h3 class="member-name">Никита Панасенко</h3>
+                            <div class="member-title">Архитектор пансионата</div>
                             <ul class="social list-inline">
-                                <li><a class="twitter" href="http://twitter.com/tnajdek" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="https://www.doppnet.com/" target="_blank"><i class="fa fa-globe"></i></a></li>
-                                <li><a class="github" href="https://github.com/tnajdek" target="_blank"><i class="fa fa-github"></i></a></li>
-                               
-                                
+                                <li><a class="twitter" href="https://vk.com/id609819713" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             </ul>
                             <div class="member-desc">
-                                <p>Tom takes care of everything on the programming end making the interface rich and flexible. He is a full-stack developer specialising in building large, scalable and user-friendly web apps. Follow him on <a href="https://twitter.com/tnajdek" target="_blank">Twitter</a> for fresh developer tips and check out his <a href="https://github.com/tnajdek" target="_blank">Github</a> for useful open-source tools.
-</p>
+                      
+                            </div><!--//member-desc-->
+                        </div><!--//member-content-->
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-md-6 col-sm-6 col-xs-12">
+                    <div class="item-inner">
+                        <div class="profile">
+                            <img class="profile-image" src="assets/images/Demid.jpg" alt="Xiaoying Riley" />
+                        </div>
+
+                        <div class="member-content">
+                            <h3 class="member-name">Демид Лапотников</h3>
+                            <div class="member-title">Ответственный по внутреннему устройству школы</div>
+                            <ul class="social list-inline">
+                                <li><a class="twitter" href="https://vk.com/demidpala4" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            </ul>
+                            <div class="member-desc">
+                      
+                            </div><!--//member-desc-->
+                        </div><!--//member-content-->
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-md-6 col-sm-6 col-xs-12">
+                    <div class="item-inner">
+                        <div class="profile">
+                            <img class="profile-image" src="assets/images/Drozd.jpg" alt="Xiaoying Riley" />
+                        </div>
+
+                        <div class="member-content">
+                            <h3 class="member-name">Софья Дроздова</h3>
+                            <div class="member-title">Ответственная за юридическую часть</div>
+                            <ul class="social list-inline">
+                                <li><a class="twitter" href="https://vk.com/drozdsofa" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            </ul>
+                            <div class="member-desc">
                             </div><!--//member-desc-->
                         </div><!--//member-content-->
                     </div><!--//item-inner-->
@@ -193,71 +201,20 @@
     
     <div id="pricing" class="pricing-section">
         <div class="container text-center">
-            <h2 class="section-title">Pricing</h2>
-            <div class="intro">AppKit's future updates are 100% FREE for existing customers</div>
-            <div class="pricing-wrapper">
-                <div class="item item-1 col-md-4 col-sm-4 col-xs-12">
-                    <div class="item-inner">
-                        <h3 class="item-heading">Single Application</h3>
-                        <div class="price-figure">
-                            <span class="currency">$</span><span class="number">20</span>
-                        </div><!--//price-figure-->
-                        <div class="price-desc">
-                            <p>Restricted to a single installation...</p>
-                            <a href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm" target="_blank">License Details</a>
-                            
-                            
-                        </div><!--//price-desc-->
-                        <a class="btn btn-cta" href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm">Buy Now</a>
-                        
-                    </div><!--//item-inner-->
-                </div><!--//item-->
-                <div class="item item-2 col-md-4 col-sm-4 col-xs-12">
-                    <div class="item-inner">
-                        <h3 class="item-heading">Multiple Applications</h3>
-                        <div class="price-figure">
-                            <span class="currency">$</span><span class="number">80</span>
-                        </div><!--//price-figure-->
-                        <div class="price-desc">
-                            <p>May extend to multiple installations...</p>
-                            <a href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm" target="_blank">License Details</a>
-                            
-                            
-                        </div><!--//price-desc-->
-                        <a class="btn btn-cta" href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm">Buy Now</a>
-                        
-                    </div><!--//item-inner-->
-                </div><!--//item-->
-                
-                <div class="item item-3 col-md-4 col-sm-4 col-xs-12">
-                    <div class="item-inner">
-                        <h3 class="item-heading">Extended</h3>
-                        <div class="price-figure">
-                            <span class="currency">$</span><span class="number">1200</span>
-                        </div><!--//price-figure-->
-                        <div class="price-desc">
-                            <p>May license, sublicense, redistribute, or resell the item...</p>
-                            <a href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm" target="_blank">License Details</a>
-                        </div><!--//price-desc-->
-                        <a class="btn btn-cta" href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm" target="_blank">Buy Now</a>
-                        
-                    </div><!--//item-inner-->
-                </div><!--//item-->
-            </div><!--//pricing-wrapper-->
-            
+            <h2 class="section-title">Цены</h2>
+            <div class="intro">Получите скидку в 50% за второго ребенка, поступившего в нашу школу в течение 5 лет, после поступления первого
+                Однодневное пребывание в школе
+                1000 рублей/месяц
+                Пятидневное пребывание в школе (только для учеников начальной школы 1-4 классов)
+                15 000 рублей/месяц
+                Семидневное пребывание в школе
+                25 000 рублей/месяц</div>
+ 
         </div><!--//container-->
     </div><!--//pricing-section-->
-    <div id="contact" class="contact-section">
-        <div class="container text-center">
-            <h2 class="section-title">Contact Us</h2>
-            <div class="contact-content">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
-                
-            </div>
-            <a class="btn btn-cta btn-primary" href="https://wrapbootstrap.com/theme/admin-appkit-admin-theme-angularjs-WB051SCJ1?ref=3wm">Get in Touch</a>
-            
-        </div><!--//container-->
-    </div><!--//contact-section-->
+
+
+    <a href="https://github.com/Arseniyyy/boarding-school">Source code</a>
      
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-1.12.3.min.js"></script>
