Add new images, change index.html and home.py

--- a/templates/appkit-landing-v1.2/index.html
+++ b/templates/appkit-landing-v1.2/index.html
@@ -106,7 +106,7 @@
                 <div class="item col-sm-4 col-xs-12">
                     <div class="item-inner">
                         <div class="figure-holder">
-                            <img class="figure-image" src="assets/images/figure-3.png" alt="image">
+                            <img class="figure-image" src="assets/images/cash1.png" alt="image">
                         </div><!--//figure-holder-->
                         <h3 class="item-title">Стоимость</h3>
                         <div class="item-desc">Стоимость обчуения в нашей школе, вместе с проживанием и питанием состовляет 25 тысяч рублей, из этой суммы деньги идут на проведение электричества, водоснабжения, зарплату учителям, бесплатные кружки для детей, просторные и уютные комнаты, а также на еду и прочие расходы.</div><!--//item-desc-->
@@ -121,7 +121,7 @@
             <h2 class="section-title">Наша команда</h2>
             <div class="story">
                 <p>Наша команда
-                    Лапотников Демид - ответственный по внутреннему устройству школы, Дроздова Софья - ответственная за юридическую часть, а также архитектор нашего пансионата, Панасенко Никита - ответственный за финансовую часть, Яньшина Анна - ответственная за организацию проекта и команды.</p>
+                    Лапотников Демид - ответственный по внутреннему устройству школы, Кошельник Арсений - создатель сайта нашей школы, Дроздова Софья - ответсвенная за юридическую часть, а также архитектор нашего пансионата, Панасенко Никита - ответсвенный за финансовую часть, Яньшина Анна - ответственная за организацию проекта и команды.</p>
             </div>
             <div class="members-wrapper row">
                 <div class="item col-md-6 col-sm-6 col-xs-12">
@@ -132,7 +132,7 @@
 
                         <div class="member-content">
                             <h3 class="member-name">Анна Яньшина</h3>
-                            <div class="member-title">Директор школы</div>
+                            <div class="member-title">Ответственная за организацию проекта и команды</div>
                             <ul class="social list-inline">
                                 <li><a class="twitter" href="https://vk.com/a.miloslav" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             </ul>
@@ -150,7 +150,7 @@
 
                         <div class="member-content">
                             <h3 class="member-name">Никита Панасенко</h3>
-                            <div class="member-title">Архитектор пансионата</div>
+                            <div class="member-title">Ответственный за финансовую часть</div>
                             <ul class="social list-inline">
                                 <li><a class="twitter" href="https://vk.com/id609819713" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             </ul>
@@ -186,9 +186,26 @@
 
                         <div class="member-content">
                             <h3 class="member-name">Софья Дроздова</h3>
-                            <div class="member-title">Ответственная за юридическую часть</div>
+                            <div class="member-title">Ответственная за юридическую часть, а также архитектор пансионата</div>
                             <ul class="social list-inline">
                                 <li><a class="twitter" href="https://vk.com/drozdsofa" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            </ul>
+                            <div class="member-desc">
+                            </div><!--//member-desc-->
+                        </div><!--//member-content-->
+                    </div><!--//item-inner-->
+                </div><!--//item-->
+                <div class="item col-md-6 col-sm-6 col-xs-12">
+                    <div class="item-inner">
+                        <div class="profile">
+                            <img class="profile-image" src="assets/images/me.jpg" alt="Xiaoying Riley" />
+                        </div>
+
+                        <div class="member-content">
+                            <h3 class="member-name">Арсений Кошельник</h3>
+                            <div class="member-title">Создатель сайта нашей школы</div>
+                            <ul class="social list-inline">
+                                <li><a class="twitter" href="https://vk.com/id547300733" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             </ul>
                             <div class="member-desc">
                             </div><!--//member-desc-->
