--- a/templates/appkit-landing-v1.2/index.html
+++ b/templates/appkit-landing-v1.2/index.html
@@ -84,7 +84,7 @@
                 <div class="item col-sm-4 col-xs-12">
                     <div class="item-inner">
                         <div class="figure-holder">
-                            <img class="figure-image" src="assets/images/figure-1.png" alt="image">
+                            <img class="figure-image" src="assets/images/first_image.png" alt="image">
                         </div><!--//figure-holder-->
                         <h3 class="item-title">Дизайн школы</h3>
                         <div class="item-desc">
@@ -96,7 +96,7 @@
                 <div class="item col-sm-4 col-xs-12">
                     <div class="item-inner">
                         <div class="figure-holder">
-                            <img class="figure-image" src="assets/images/figure-2.png" alt="image">
+                            <img class="figure-image" src="assets/images/second.jpg" alt="image">
                         </div><!--//figure-holder-->
                         <h3 class="item-title">Как устроена школа</h3>
                         <div class="item-desc">Устройство школы
@@ -106,7 +106,7 @@
                 <div class="item col-sm-4 col-xs-12">
                     <div class="item-inner">
                         <div class="figure-holder">
-                            <img class="figure-image" src="assets/images/cash1.png" alt="image">
+                            <img class="figure-image" src="assets/images/cash.jpg" alt="image">
                         </div><!--//figure-holder-->
                         <h3 class="item-title">Стоимость</h3>
                         <div class="item-desc">Стоимость обчуения в нашей школе, вместе с проживанием и питанием состовляет 25 тысяч рублей, из этой суммы деньги идут на проведение электричества, водоснабжения, зарплату учителям, бесплатные кружки для детей, просторные и уютные комнаты, а также на еду и прочие расходы.</div><!--//item-desc-->
